# gdac

./: Cargo.toml  README.md
gdac/: Cargo.toml
gdac-examples/: Cargo.toml
gdac-examples/src/: main.rs
gdac/src/: error.rs  lib.rs  prelude.rs
