[workspace]
resolver = "2"
members = [
    "gdac",
    "gdac-examples",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["victoryforphil"]
license = "MIT"

[workspace.dependencies]
# Core library dependencies
anyhow = "1.0"
thiserror = "1.0"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
serde = { version = "1.0", features = ["derive"] }

# Binary dependencies
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
